--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,37 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+}
+
+.poker-card {
+  width: 150px;
+  height: 200px;
+  border: 1px solid black;
+  border-radius: 10px;
+  background-color: white;
+  position: relative;
+}
+
+.card-number {
+  font-size: 48px;
+  font-weight: bold;
+  margin-top: 70px;
+}
+
+.card-suit {
+  font-size: 24px;
+  font-weight: bold;
+  position: absolute;
+}
+
+.top-suit {
+  top: 5px;
+  left: 10px;
+}
+
+.bottom-suit {
+  bottom: 5px;
+  right: 10px;
+  transform: rotate(180deg);
+}
